// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header stories snapshot > CheckoutVariant story renders and matches snapshot 1`] = `
<div
  class="min-h-screen bg-background"
>
  <header
    class="bg-header-background text-header-foreground border-b border-header-border fixed top-0 left-0 right-0 z-50 [@media(max-height:400px)]:static transition-[background-color,border-color,color] duration-300 ease-out"
    data-slot="site-header"
    style="--header-height: 0px;"
  >
    <div
      class="section-container"
    >
      <div
        class="flex items-center h-14"
      >
        <a
          class="flex-shrink-0 flex items-center"
          data-testid="header-logo"
          href="/RefArchGlobal/en-GB/"
        >
          <img
            alt="Luxury Next"
            class="h-8 w-auto [filter:var(--header-logo-filter)]"
            src="__ASSET_MOCK__"
          />
        </a>
        <div
          class="flex-1"
        />
        <button
          aria-label="My cart, number of items: 0"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 relative cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
          data-size="default"
          data-slot="button"
          data-variant="ghost"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shopping-cart size-5"
            data-testid="shopping-cart-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="21"
              r="1"
            />
            <circle
              cx="19"
              cy="21"
              r="1"
            />
            <path
              d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="min-h-screen bg-background"
>
  <header
    class="bg-header-background text-header-foreground border-b border-header-border fixed top-0 left-0 right-0 z-50 [@media(max-height:400px)]:static transition-transform duration-300 ease-out motion-reduce:transition-none motion-reduce:translate-y-0"
    data-header-concealed="false"
    data-slot="site-header"
    style="--header-height: 0px;"
  >
    <div
      class="section-container"
    >
      <div
        class="relative flex flex-wrap items-center gap-x-3 py-3 lg:gap-x-6 lg:py-3.5"
      >
        <div
          class="z-10 flex shrink-0 items-center self-stretch"
        >
          <div
            class="flex items-center self-stretch"
          >
            <button
              aria-expanded="false"
              aria-label="Open menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 lg:hidden hover:bg-transparent hover:opacity-50 transition-opacity"
              data-size="icon"
              data-slot="button"
              data-variant="ghost"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-menu size-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 5h16"
                />
                <path
                  d="M4 12h16"
                />
                <path
                  d="M4 19h16"
                />
              </svg>
            </button>
          </div>
          <a
            class="flex shrink-0 items-center max-lg:absolute max-lg:left-1/2 max-lg:top-1/2 max-lg:z-0 max-lg:-translate-x-1/2 max-lg:-translate-y-1/2"
            data-testid="header-logo"
            href="/RefArchGlobal/en-GB/"
          >
            <img
              alt="Luxury Next"
              class="h-auto w-auto max-h-5 max-w-[6.25rem] lg:max-h-10 lg:max-w-none [filter:var(--header-logo-filter)]"
              src="__ASSET_MOCK__"
            />
          </a>
        </div>
        <div
          class="order-last mt-2 hidden w-full min-w-0 lg:block xl:order-none xl:mt-0 xl:w-auto xl:flex-1 xl:px-8"
          data-slot="luxury-header-search"
        >
          <div
            class="mx-auto w-full max-w-4xl"
          >
            <div
              class="contents"
            >
              <form
                class="relative z-10"
              >
                <div
                  class="relative"
                >
                  <label
                    class="sr-only"
                    for="header-search-input-_r_0_"
                  >
                    Search by name or reference
                  </label>
                  <input
                    aria-autocomplete="list"
                    aria-controls="radix-_r_1_"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 min-w-0 rounded-ui border bg-transparent px-3 py-1 text-base shadow-ui transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 focus-visible:border-header-foreground focus-visible:ring-1 focus-visible:ring-header-foreground"
                    data-slot="popover-trigger"
                    data-state="closed"
                    data-testid="header-search"
                    id="header-search-input-_r_0_"
                    placeholder="Search by name or reference"
                    role="combobox"
                    type="text"
                  />
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-search pointer-events-none absolute left-3 top-1/2 size-5 -translate-y-1/2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21 21-4.34-4.34"
                    />
                    <circle
                      cx="11"
                      cy="11"
                      r="8"
                    />
                  </svg>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="relative z-10 ml-auto flex shrink-0 items-center justify-end gap-x-0.5 lg:gap-x-1"
        >
          <div
            class="hidden lg:flex items-center self-stretch pr-2"
            data-slot="luxury-utility-slot"
          >
            <nav
              aria-label="Site"
              class="flex h-full w-full items-center"
            >
              <ul
                class="flex items-center gap-5"
              >
                <li>
                  <a
                    class="text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-header-foreground hover:text-header-menu-hover-foreground"
                    href="/RefArchGlobal/en-GB/find-your-watch"
                  >
                    Watch Finder
                  </a>
                </li>
                <li>
                  <a
                    class="text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-header-foreground hover:text-header-menu-hover-foreground"
                    href="/RefArchGlobal/en-GB/boutiques"
                  >
                    Boutiques
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <button
            aria-controls="header-mobile-search"
            aria-expanded="false"
            aria-label="Open search"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 lg:hidden cursor-pointer px-1 text-header-foreground hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="icon"
            data-slot="button"
            data-testid="header-search-toggle"
            data-variant="ghost"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search size-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
          </button>
          <button
            aria-controls="radix-_r_2_"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Sign In"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="default"
            data-slot="popover-trigger"
            data-state="closed"
            data-testid="user-account-trigger"
            data-variant="ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-in size-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10 17 5-5-5-5"
              />
              <path
                d="M15 12H3"
              />
              <path
                d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
              />
            </svg>
          </button>
          <a
            aria-label="Wishlist"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="default"
            data-slot="button"
            data-variant="ghost"
            href="/RefArchGlobal/en-GB/wishlist"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart size-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </a>
          <button
            aria-label="My cart, number of items: 0"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 relative cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="default"
            data-slot="button"
            data-variant="ghost"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-cart size-5"
              data-testid="shopping-cart-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="21"
                r="1"
              />
              <circle
                cx="19"
                cy="21"
                r="1"
              />
              <path
                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="hidden lg:block"
        data-slot="luxury-catalog-slot"
      >
        <div
          class="w-full hidden lg:block"
          data-testid="luxury-catalog-slot-nav"
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`Header stories snapshot > MobileView story renders and matches snapshot 1`] = `
<div
  class="min-h-screen bg-background"
>
  <div
    class="header-mobile-story"
  >
    <style>
      
                .header-mobile-story button.lg\\:hidden {
                    display: inline-flex !important;
                }
                .header-mobile-story div.lg\\:hidden:not([aria-hidden]) {
                    display: block !important;
                }
                .header-mobile-story [aria-hidden="true"].lg\\:hidden,
                .header-mobile-story .hidden.lg\\:flex,
                .header-mobile-story .hidden.lg\\:block {
                    display: none !important;
                }
                .header-mobile-story [aria-hidden="false"].lg\\:hidden {
                    display: block !important;
                }
            
    </style>
    <header
      class="bg-header-background text-header-foreground border-b border-header-border fixed top-0 left-0 right-0 z-50 [@media(max-height:400px)]:static transition-transform duration-300 ease-out motion-reduce:transition-none motion-reduce:translate-y-0"
      data-header-concealed="false"
      data-slot="site-header"
      style="--header-height: 0px;"
    >
      <div
        class="section-container"
      >
        <div
          class="relative flex flex-wrap items-center gap-x-3 py-3 lg:gap-x-6 lg:py-3.5"
        >
          <div
            class="z-10 flex shrink-0 items-center self-stretch"
          >
            <div
              class="flex items-center self-stretch"
            >
              <button
                aria-expanded="false"
                aria-label="Open menu"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 lg:hidden hover:bg-transparent hover:opacity-50 transition-opacity"
                data-size="icon"
                data-slot="button"
                data-variant="ghost"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-menu size-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 5h16"
                  />
                  <path
                    d="M4 12h16"
                  />
                  <path
                    d="M4 19h16"
                  />
                </svg>
              </button>
            </div>
            <a
              class="flex shrink-0 items-center max-lg:absolute max-lg:left-1/2 max-lg:top-1/2 max-lg:z-0 max-lg:-translate-x-1/2 max-lg:-translate-y-1/2"
              data-testid="header-logo"
              href="/RefArchGlobal/en-GB/"
            >
              <img
                alt="Luxury Next"
                class="h-auto w-auto max-h-5 max-w-[6.25rem] lg:max-h-10 lg:max-w-none [filter:var(--header-logo-filter)]"
                src="__ASSET_MOCK__"
              />
            </a>
          </div>
          <div
            class="order-last mt-2 hidden w-full min-w-0 lg:block xl:order-none xl:mt-0 xl:w-auto xl:flex-1 xl:px-8"
            data-slot="luxury-header-search"
          >
            <div
              class="mx-auto w-full max-w-4xl"
            >
              <div
                class="contents"
              >
                <form
                  class="relative z-10"
                >
                  <div
                    class="relative"
                  >
                    <label
                      class="sr-only"
                      for="header-search-input-_r_3_"
                    >
                      Search by name or reference
                    </label>
                    <input
                      aria-autocomplete="list"
                      aria-controls="radix-_r_4_"
                      aria-expanded="false"
                      aria-haspopup="dialog"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 min-w-0 rounded-ui border bg-transparent px-3 py-1 text-base shadow-ui transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 focus-visible:border-header-foreground focus-visible:ring-1 focus-visible:ring-header-foreground"
                      data-slot="popover-trigger"
                      data-state="closed"
                      data-testid="header-search"
                      id="header-search-input-_r_3_"
                      placeholder="Search by name or reference"
                      role="combobox"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-search pointer-events-none absolute left-3 top-1/2 size-5 -translate-y-1/2"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21 21-4.34-4.34"
                      />
                      <circle
                        cx="11"
                        cy="11"
                        r="8"
                      />
                    </svg>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            class="relative z-10 ml-auto flex shrink-0 items-center justify-end gap-x-0.5 lg:gap-x-1"
          >
            <div
              class="hidden lg:flex items-center self-stretch pr-2"
              data-slot="luxury-utility-slot"
            >
              <nav
                aria-label="Site"
                class="flex h-full w-full items-center"
              >
                <ul
                  class="flex items-center gap-5"
                >
                  <li>
                    <a
                      class="text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-header-foreground hover:text-header-menu-hover-foreground"
                      href="/RefArchGlobal/en-GB/find-your-watch"
                    >
                      Watch Finder
                    </a>
                  </li>
                  <li>
                    <a
                      class="text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-header-foreground hover:text-header-menu-hover-foreground"
                      href="/RefArchGlobal/en-GB/boutiques"
                    >
                      Boutiques
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
            <button
              aria-controls="header-mobile-search"
              aria-expanded="false"
              aria-label="Open search"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 lg:hidden cursor-pointer px-1 text-header-foreground hover:bg-transparent hover:opacity-50 transition-opacity"
              data-size="icon"
              data-slot="button"
              data-testid="header-search-toggle"
              data-variant="ghost"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search size-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-4.34-4.34"
                />
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
              </svg>
            </button>
            <button
              aria-controls="radix-_r_5_"
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Sign In"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
              data-size="default"
              data-slot="popover-trigger"
              data-state="closed"
              data-testid="user-account-trigger"
              data-variant="ghost"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-log-in size-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m10 17 5-5-5-5"
                />
                <path
                  d="M15 12H3"
                />
                <path
                  d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
                />
              </svg>
            </button>
            <a
              aria-label="Wishlist"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
              data-size="default"
              data-slot="button"
              data-variant="ghost"
              href="/RefArchGlobal/en-GB/wishlist"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-heart size-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
                />
              </svg>
            </a>
            <button
              aria-label="My cart, number of items: 0"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 relative cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
              data-size="default"
              data-slot="button"
              data-variant="ghost"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart size-5"
                data-testid="shopping-cart-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="hidden lg:block"
          data-slot="luxury-catalog-slot"
        >
          <div
            class="w-full hidden lg:block"
            data-testid="luxury-catalog-slot-nav"
          />
        </div>
      </div>
    </header>
  </div>
</div>
`;

exports[`Header stories snapshot > WithAnnouncementBanner story renders and matches snapshot 1`] = `
<div
  class="min-h-screen bg-background"
>
  <div
    data-skip-action-logger="true"
  >
    <div
      class="relative flex items-center gap-2 px-4 md:px-10 tracking-wide justify-center bg-primary text-primary-foreground py-3 text-sm"
      role="status"
    >
      <p
        class="text-center"
      >
        FREE WORLDWIDE SHIPPING from $90
      </p>
    </div>
  </div>
  <header
    class="bg-header-background text-header-foreground border-b border-header-border fixed top-0 left-0 right-0 z-50 [@media(max-height:400px)]:static transition-transform duration-300 ease-out motion-reduce:transition-none motion-reduce:translate-y-0"
    data-header-concealed="false"
    data-slot="site-header"
    style="--header-height: 0px;"
  >
    <div
      class="section-container"
    >
      <div
        class="relative flex flex-wrap items-center gap-x-3 py-3 lg:gap-x-6 lg:py-3.5"
      >
        <div
          class="z-10 flex shrink-0 items-center self-stretch"
        >
          <div
            class="flex items-center self-stretch"
          >
            <button
              aria-expanded="false"
              aria-label="Open menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 lg:hidden hover:bg-transparent hover:opacity-50 transition-opacity"
              data-size="icon"
              data-slot="button"
              data-variant="ghost"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-menu size-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 5h16"
                />
                <path
                  d="M4 12h16"
                />
                <path
                  d="M4 19h16"
                />
              </svg>
            </button>
          </div>
          <a
            class="flex shrink-0 items-center max-lg:absolute max-lg:left-1/2 max-lg:top-1/2 max-lg:z-0 max-lg:-translate-x-1/2 max-lg:-translate-y-1/2"
            data-testid="header-logo"
            href="/RefArchGlobal/en-GB/"
          >
            <img
              alt="Luxury Next"
              class="h-auto w-auto max-h-5 max-w-[6.25rem] lg:max-h-10 lg:max-w-none [filter:var(--header-logo-filter)]"
              src="__ASSET_MOCK__"
            />
          </a>
        </div>
        <div
          class="order-last mt-2 hidden w-full min-w-0 lg:block xl:order-none xl:mt-0 xl:w-auto xl:flex-1 xl:px-8"
          data-slot="luxury-header-search"
        >
          <div
            class="mx-auto w-full max-w-4xl"
          >
            <div
              class="contents"
            >
              <form
                class="relative z-10"
              >
                <div
                  class="relative"
                >
                  <label
                    class="sr-only"
                    for="header-search-input-_r_6_"
                  >
                    Search by name or reference
                  </label>
                  <input
                    aria-autocomplete="list"
                    aria-controls="radix-_r_7_"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 min-w-0 rounded-ui border bg-transparent px-3 py-1 text-base shadow-ui transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 focus-visible:border-header-foreground focus-visible:ring-1 focus-visible:ring-header-foreground"
                    data-slot="popover-trigger"
                    data-state="closed"
                    data-testid="header-search"
                    id="header-search-input-_r_6_"
                    placeholder="Search by name or reference"
                    role="combobox"
                    type="text"
                  />
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-search pointer-events-none absolute left-3 top-1/2 size-5 -translate-y-1/2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21 21-4.34-4.34"
                    />
                    <circle
                      cx="11"
                      cy="11"
                      r="8"
                    />
                  </svg>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="relative z-10 ml-auto flex shrink-0 items-center justify-end gap-x-0.5 lg:gap-x-1"
        >
          <div
            class="hidden lg:flex items-center self-stretch pr-2"
            data-slot="luxury-utility-slot"
          >
            <nav
              aria-label="Site"
              class="flex h-full w-full items-center"
            >
              <ul
                class="flex items-center gap-5"
              >
                <li>
                  <a
                    class="text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-header-foreground hover:text-header-menu-hover-foreground"
                    href="/RefArchGlobal/en-GB/find-your-watch"
                  >
                    Watch Finder
                  </a>
                </li>
                <li>
                  <a
                    class="text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-header-foreground hover:text-header-menu-hover-foreground"
                    href="/RefArchGlobal/en-GB/boutiques"
                  >
                    Boutiques
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <button
            aria-controls="header-mobile-search"
            aria-expanded="false"
            aria-label="Open search"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 lg:hidden cursor-pointer px-1 text-header-foreground hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="icon"
            data-slot="button"
            data-testid="header-search-toggle"
            data-variant="ghost"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search size-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
          </button>
          <button
            aria-controls="radix-_r_8_"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Sign In"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="default"
            data-slot="popover-trigger"
            data-state="closed"
            data-testid="user-account-trigger"
            data-variant="ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-in size-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10 17 5-5-5-5"
              />
              <path
                d="M15 12H3"
              />
              <path
                d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
              />
            </svg>
          </button>
          <a
            aria-label="Wishlist"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="default"
            data-slot="button"
            data-variant="ghost"
            href="/RefArchGlobal/en-GB/wishlist"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart size-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </a>
          <button
            aria-label="My cart, number of items: 0"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 relative cursor-pointer lg:has-[>svg]:px-4 has-[>svg]:px-1 hover:bg-transparent hover:opacity-50 transition-opacity"
            data-size="default"
            data-slot="button"
            data-variant="ghost"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-cart size-5"
              data-testid="shopping-cart-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="21"
                r="1"
              />
              <circle
                cx="19"
                cy="21"
                r="1"
              />
              <path
                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="hidden lg:block"
        data-slot="luxury-catalog-slot"
      >
        <div
          class="w-full hidden lg:block"
          data-testid="luxury-catalog-slot-nav"
        />
      </div>
    </div>
  </header>
</div>
`;
